--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,8 @@
     <title>demo</title>
     <style>
       #main {
-        max-width: 1200px;
+        max-width: 1500px;
+        min-width: 1000px;
         height: 600px;
         margin: 0 auto;
       }
